# Email-Categorization-API

./: README.md
email_categorisation/: Dockerfile  config.py  email_processor.py  launcher.py  main.py  nohup.out  pyproject.toml  requirements.txt
email_categorisation/core/: database.py  event_handlers.py
email_categorisation/data/attachments/: email-kishan@deftboxsolutions.co.in.mobileconfig
email_categorisation/models/: email.py
email_categorisation/scripts/: fetch_emails.py  insert_sample_emails.py  run_email_processor.py
email_categorisation/utils/: enums.py  errors.py  misc.py
