[tool.poetry]
package-mode = false

name = "email-categorisation"
version = "0.1.0"
description = ""
authors = ["kishan <kishan@deftboxssolutions.co.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


